# android-ndk-vsnprintf-issue

./: README.md
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp
